<resources>
    <string name="app_name">Movies</string>
    <string name="API_key">ae6aa4d2</string>
    <string name="base_url">https://www.omdbapi.com/</string>

    <!-- Main Activity -->
    <string name="title">Movies</string>
    <string name="add_movies">Add Movies to DB</string>
    <string name="search_for_movies">Search for Movies</string>
    <string name="search_for_actors">Search for Actors</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="search">Search</string>

    <!-- Add Movies Activity -->
    <string name="add_title">Add a Movie</string>
    <string name="add_movie_title">Title</string>
    <string name="add_year">Year</string>
    <string name="add_rated">Rated</string>
    <string name="add_released">Released</string>
    <string name="add_runtime">Runtime</string>
    <string name="add_genre">Genre</string>
    <string name="add_director">Director</string>
    <string name="add_writer">Writer</string>
    <string name="add_actors">Actors</string>
    <string name="add_plot">Plot</string>
    <string name="save">Save</string>

    <!-- Search for Movies Activity -->
    <string name="search_prompt">Enter a movie title</string>
    <string name="retrieve_button">Retrieve Movie</string>
    <string name="save_movie_button">Save Movie to Database</string>

    <!-- Search for Actors Activity -->
    <string name="search_actors_prompt">Enter an actors name</string>

    <!-- Advanced Activity -->
    <string name="advanced_title">Search for Actors</string>
    <string name="advanced_prompt">Enter a movie title</string>
</resources>